tests/NormalTests/paczka1/fuzzy1/53584185.err
Error in line 1: A337 A653 8,1
Error in line 2: A337 S801 27,8
Error in line 4: A337 A653 66,8
Error in line 15: JhlWz0eabV A653 84,6
Error in line 19: JhlWz0eabV A229 57,3
Error in line 38: JhlWz0eabV A337 71,5
